# box

./: .gitignore  Cargo.toml  SPEC-zh.md  SPEC.md
.github/workflows/: deploy-site.yml  spec-drift.yml
abi/: Cargo.toml
abi/src/: lib.rs
box/: cli.box  http.box  i18n.box  index.box  mcp.box  schema.box
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
grammars/textmate/: box.tmLanguage.json
grammars/tree-sitter-box/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
grammars/tree-sitter-box/bindings/c/: tree-sitter-box.pc.in
grammars/tree-sitter-box/bindings/go/: binding.go  binding_test.go
grammars/tree-sitter-box/bindings/node/: binding.cc
grammars/tree-sitter-box/bindings/python/tests/: test_binding.py
grammars/tree-sitter-box/bindings/python/tree_sitter_box/: __init__.py  binding.c
grammars/tree-sitter-box/bindings/rust/: build.rs  lib.rs
grammars/tree-sitter-box/bindings/swift/TreeSitterBox/: box.h
grammars/tree-sitter-box/bindings/swift/TreeSitterBoxTests/: TreeSitterBoxTests.swift
grammars/tree-sitter-box/queries/: highlights.scm  indents.scm
grammars/tree-sitter-box/src/: grammar.json  node-types.json  parser.c
integrations/zed/: Makefile  README.md  extension.toml
integrations/zed/languages/box/: brackets.scm  config.toml
plugins/box-http/: Cargo.toml
plugins/box-http/src/: main.rs
plugins/box-i18n/: Cargo.toml
plugins/box-i18n/src/: main.rs
plugins/box-mcp/: Cargo.toml
plugins/box-mcp/src/: main.rs
site/: index.md  package-lock.json  package.json
site/.vitepress/: config.ts
site/.vitepress/theme/: index.ts  style.css
site/.vitepress/theme/components/: BoxScene.vue  HeroBox.vue  Install.vue  LangIcon.vue  Pipeline.vue
site/guide/: getting-started.md  language.md
site/public/: robots.txt
site/zh/: index.md
site/zh/guide/: getting-started.md  language.md
specs/: http.md  i18n.md
