[workspace]
resolver = "2"
members = [
    "core",
    "abi",
    "cli",
    "plugins/box-http",
    "plugins/box-mcp",
    "plugins/box-i18n",
]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT"
authors    = ["ADI Family <team@adi-family.com>"]
repository = "https://github.com/adi-family/box"

[workspace.dependencies]
# Internal — path deps pin members against each other.
box-abi-v1 = { path = "abi" }
box-core   = { path = "core" }

# Shared external deps. Versions live here; members opt in by name.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
async-trait = "0.1"
anyhow      = "1"
thiserror   = "2"
tokio       = { version = "1", features = ["full"] }
clap        = { version = "4", features = ["derive"] }
tracing     = "0.1"
