[package]
name        = "box-abi-v1"
description = "Box plugin ABI v1 — types and traits for kind providers"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde.workspace       = true
serde_json.workspace  = true
async-trait.workspace = true
thiserror.workspace   = true
