[package]
name        = "box-cli"
description = "Box command-line tool"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "box"
path = "src/main.rs"

[dependencies]
box-core.workspace = true
clap.workspace     = true
anyhow.workspace   = true
tokio.workspace    = true
tracing.workspace  = true
