[package]
name        = "box-core"
description = "Box language parser, AST, and plugin host"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
box-abi-v1.workspace  = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
