[package]
name        = "box-mcp"
description = "@box/mcp plugin — MCP surface kind provider"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "box-mcp"
path = "src/main.rs"

[dependencies]
box-abi-v1.workspace  = true
serde.workspace       = true
serde_json.workspace  = true
async-trait.workspace = true
tokio.workspace       = true
anyhow.workspace      = true
